--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,7 +1,1 @@
-.app-container{
-	max-width: 1200px;
-	// min-height: 1000px;
-	margin: 0 auto;
-	padding: 0;
-	background-color: rgb(229, 197, 197);
-}
+@import "../style/global-styles.scss"
