--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ img {
 /* ================ REUSABLE CSS CLASSES =================== */
 
 .section{
-	padding: 6rem 0 2rem;
+	padding: 6rem 0 2rem 0;
 }
 
 .section__title{
@@ -190,8 +190,15 @@ img {
 }
  /* For medium devices */
 @media only screen and (max-width: 768px) {
+	body{
+		margin: 0 0 var(--header-height) 0;
+	}
 	.section{
 		padding: 2rem 0 4rem;
+	}
+
+	.section__subtitle{
+		margin-bottom: var(--mb-3);
 	}
 }
 
