--- a/src/components/servicesSection/services.module.css
+++ b/src/components/servicesSection/services.module.css
@@ -120,3 +120,45 @@
 	opacity: 1;
 	visibility: visible;
 }
+
+/* ================ BREAKPOINTS =================== */
+ /* For large devices */
+@media only screen and (max-width: 992px) {
+	.container{
+		grid-template-columns: repeat(3, 218px);
+	}
+}
+ /* For medium devices */
+@media only screen and (max-width: 768px) {
+	.container{
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.content{
+		padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+	}
+
+	.icon{
+		font-size: 1.5rem;
+	}
+}
+
+@media only screen and (max-width: 576px) {
+	.modal_content{
+		padding: 4.5rem 1.5rem 2.5rem;
+	}
+
+	.modal_description{
+		padding: 0;
+	}
+}
+ /* For small devices */
+@media only screen and (max-width: 350px) {
+	.container{
+		grid-template-columns: max-content;
+	}
+
+	.content{
+		padding-right: 6rem;
+	}
+}
