--- a/src/components/qualificationSection/qualification.module.css
+++ b/src/components/qualificationSection/qualification.module.css
@@ -83,7 +83,10 @@
 }
  /* For medium devices */
 @media only screen and (max-width: 768px) {
-
+ .container{
+	margin-left: var(--mb-1-5);
+	margin-right: var(--mb-1-5);
+ }
 }
 
 @media only screen and (max-width: 576px) {
