--- a/src/components/qualificationSection/qualification.module.css
+++ b/src/components/qualificationSection/qualification.module.css
@@ -90,7 +90,12 @@
 }
 
 @media only screen and (max-width: 576px) {
-
+	.sections{
+		grid-template-columns: initial;
+	}
+	.button{
+		margin: 0 var(--mb-0-75);
+	}
 }
  /* For small devices */
 @media only screen and (max-width: 350px) {
