--- a/src/components/testimonials/testimonials.module.css
+++ b/src/components/testimonials/testimonials.module.css
@@ -2,10 +2,38 @@
 	width: 750px;
 }
 
-._card{}
+._card{
+	background-color: var(--container-color);
+	border: 1px solid rgba(0,0,0,0.1);
+	padding: 1.5rem 2rem;
+	border-radius: 1.5rem;
+	margin-bottom: var(--mb-3);
+}
 
-._img{}
+._img{
+	width: 60px;
+	border-radius: 3rem;
+	margin-bottom: var(--mb-1);
+}
 
-._name{}
+._name{
+	font-size: var(--normal-font-size);
+	font-weight: var(--font-medium);
+	margin-bottom: var(--mb-0-25);
+}
 
-._description{}
+._description{
+	font-size: var(--small-font-size);
+}
+
+/* ================ BREAKPOINTS =================== */
+ /* For large devices */
+ @media only screen and (max-width: 992px) {
+	.container{
+		width: initial;
+	}
+
+	._card{
+		padding: 1.25rem 1.5rem;
+	}
+ }
