--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,4 +1,11 @@
-
+.header{
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: var(--z-fixed);
+	background-color: var(--body-color);
+}
 
 .nav{
 	height: calc(var(--header-height) + 1.5rem);
@@ -103,6 +110,13 @@
 		display: block;
 	}
 }
+
+ /* For medium devices */
+ @media only screen and (max-width: 768px) {
+	.header{
+		box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+	}
+ }
 
  /* For small devices */
  @media only screen and (max-width: 350px) {
