--- a/src/components/Slider/slider.css
+++ b/src/components/Slider/slider.css
@@ -1,10 +1,11 @@
 .slider{
-	display: flex;
+	display: block;
 	justify-content: center;
 	position: relative;
 	background-color: rgb(27, 37, 37);
 	width: 100%;
 	height: 400px;
+	padding: 6rem 2rem 3rem;
 }
 
 .slider__image-wrapper{
